--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,41 +2,42 @@ version: 2.1
 
 jobs:
   install:
+    working_directory: ~/project
     docker:
-    - image: vuejs/ci
+      - image: vuejs/ci
     steps:
       - run:
-            name: Install dependencies
-            command: |
-              ls -al
-              yarn install
+        name: Install dependencies
+        command: |
+          ls -al
+          yarn install
   lint:
     docker:
-    - image: vuejs/ci
+      - image: vuejs/ci
     steps:
       - run:
-            name: Lint code
-            command: |
-              ls -al
-              yarn lint
+        name: Lint code
+        command: |
+          ls -al
+          yarn lint
   test:
     docker:
     - image: vuejs/ci
     steps:
       - run:
-            name: Run unit tests
-            command: |
-              ls -al
-              yarn test:unit
+        name: Run unit tests
+        command: |
+          ls -al
+          yarn test:unit
 
 workflows:
- version: 2
- lint_and_test:
-   jobs:
-     - install
-     - lint:
-         requires:
-           - install
-     - test:
-         requires:
-           - install
+  version: 2
+  lint_and_test:
+    jobs:
+      - install
+      - lint:
+        requires:
+          - install
+      - test:
+        requires:
+          - install
