ci: basic ci change working directory

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,13 +5,14 @@ jobs:
     docker:
       - image: vuejs/ci
     steps:
+      - checkout
       - run:
           name: Install dependencies
           command: |
             ls -al
             yarn install
   lint:
-    working_directory: ~/project
+    working_directory: ~/project/blah
     docker:
       - image: vuejs/ci
     steps:
