--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
           paths:
             - node_modules/
       - persist_to_workspace:
-          root: ~/project
+          root: ~/
           paths:
             - project/blah
   lint:
@@ -29,7 +29,7 @@ jobs:
       - image: vuejs/ci
     steps:
       - attach_workspace:
-          at: ~/project
+          at: ~/
       - run:
           name: Lint Code
           command: |
