ci: add unit testing

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,6 +35,18 @@ jobs:
           command: |
             ls -al
             yarn lint
+    test:
+    working_directory: ~/project/blah
+    docker:
+      - image: vuejs/ci
+    steps:
+      - attach_workspace:
+          at: ~/
+      - run:
+          name: Unit testing
+          command: |
+            ls -al
+            yarn test:unit
 
 workflows:
   version: 2
@@ -42,5 +54,8 @@ workflows:
     jobs:
       - install
       - lint:
+          requires:
+            - install
+      - test:
           requires:
             - install
