--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
     "husky": "^4.2.5",
+    "jest-junit": "^10.0.0",
     "sass": "^1.26.3",
     "sass-loader": "^8.0.2",
     "typescript": "~3.8.3",
