--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,8 +59,11 @@ jobs:
       - run:
           name: Run tests with JUnit as reporter
           command: yarn test:unit --ci --runInBand --reporters=default --reporters=jest-junit
-          environment:
-            JEST_JUNIT_OUTPUT_DIR: "reports/junit/js-test-results.xml"
+          # environment:
+          #   JEST_JUNIT_OUTPUT_DIR: "reports/junit/js-test-results.xml"
+      - store_test_results:
+          path: test-results
+
 
 workflows:
   version: 2
